website/src/style.css
/* dark mode style guide:
background: #222
text: #aaa
base: #3E188F
structural: #46346E
edge: #b4a0df
ghost: #444
border: #210D4D
hover: #393939
other: #4F1FB8, #7059A2
gentle highlight: #2b2b2b
medium highlight: #67539177
highlight with transparency: #777a
recessed: #101010
*/

body {
  font-family: Verdana, Geneva, sans-serif;
  background: #222;
  color: #aaa;
}

.title {
  display: inline;
}
.preview {
  width: 100%;
  height: 100%;
  object-fit: contain;
  background-size: cover;
}
.bkg {
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    background-position: center;
}
.timeline {
  /* width: 100%; */
  width: 90vw;
  max-height: 40vh;
  /* display: flex; */
  display: -webkit-inline-box;
  overflow: auto;
  border: 8px solid #210D4D;
  border-radius: 1em;
  padding: 1em;
  background-color: #101010
}
.clip {
  display:inline-flex;
  position: relative;
  /* width: 300px;
  max-height: 3em; */
  min-width: 1px;
  min-height: 40px;
  margin: 5px;
  margin-left: 0px;
  margin-right: 0px;
  background-color: #3E188F;
  color: #ccc;
  border-radius: .5em;
  border: 1px solid #210D4D;
  box-sizing: border-box;
  /* padding: 10px; */
  touch-action: none;
  user-select: none;
  -webkit-transform: translate(0px, 0px);
  transform: translate(0px, 0px);
  /* transition: all 1s ease-out; */
  height: 1em;
  /* text-overflow: ellipsis; */
  overflow: hidden;
}
.template {
  background-color: #520E7D;
}
.selected {
  background-color: #4F1FB8;
  border: solid #393939 1px;
}
.monitor {
  text-align: right;
  min-width: 40vw;
  max-height: 50vh;
  border: 4px solid #210D4D;
}

.project {
  display: inline-table;
  overflow: scroll;
  border: 4px solid #210D4D;
  padding: .5em;
  border-radius: 1em;
  background-color: #1d1d1d;

}
.project tr:nth-child(even){background-color: #2b2b2b;}
.project tr:hover {background-color: #67539177;}
.project th {
  padding: 10px;
  padding-right: 10px;
  text-align: left;
  background-color: #46346E;
  color: #ddd;

}
.projects {
  display: table;
}

.bin {
  display: inherit;
  max-height: 50vh;
  margin-top: .5em;
  padding: .5em;
}
.head {
  display: flex;
  height: 40vh;
  background-color: black;
  border: #46346E;
  border-width: 4px;
  border-style: solid;
  margin-bottom: .5em;
  border-radius: 6px;
}
@keyframes blinker {
  50% {
    opacity: 0;
  }
}

.bar {
  display: flex;
}
.formthumb {
  max-width: 20vw;
  max-height: 20vh;
  padding: 1em;
}
.subform {
  border: #46346E;
  border-width: 4px;
  border-style: solid;
  border-radius: 10px;
  margin-left: auto;
  margin-left: 15vw;
  margin-right: 1em;
}
.toolbar {
  display: flex;
  border: #46346E;
  background-color: #202020;
  border-width: 4px;
  border-style: solid;
  margin-bottom: .5em;
  border-radius: 12px;
  padding: 2px;
}
.tools {
  justify-content: space-between;
}
.tools i {
  border-style: solid;
  border-color: #393939;
  border-radius: 10px;
  padding: 2px;
  width: 25px;
  text-align: center;
  font-style: normal;
}
.tools i:hover {
  background-color: #393939;
}
.tools i:active {
  animation: blinker .2s 1;
}
.renders {
  display: inline-block;
}
.renders td {
  text-align: center;
}
.renders tr td:FIRST-CHILD {
  text-align: left;
}
th {
  text-align: center;
}
select {
  color: #aaa;
  background-color: #210D4D;
  border-radius: .4em;
  margin-bottom: .5em;
}
.sliders {
  padding: 1em
}
/* the slider bar */
.slider {
  position: relative;
  width: 100%;
  height: 1em;
  margin: .5em auto;
  margin-bottom: 2em;
  margin-top: 2em;
  background-color: #46346E;
  border-radius: 0.5em;
  box-sizing: border-box;
  font-size: 1em;

  -ms-touch-action: none;
     touch-action: none;
}

/* the slider handle */
.slider:before {
  content: "";
  display: block;
  position: relative;
  top: -0.5em;

  width: 2em;
  height: 2em;
  margin-left: -1em;
  border: solid 0.25em #b4a0df;
  border-radius: 1em;
  background-color: inherit;

  box-sizing: border-box;
}

/* display the value */
.slider:after {
  content: attr(data-value);
  position: absolute;
  top: -1.5em;
  width: 2em;
  line-height:1em;
  margin-left: -1em;
  text-align: center;
}

.resizable {
  background: white;
  width: 100px;
  height: 100px;
  position: absolute;
  top: 100px;
  left: 100px;
}

.resizable .resizers{
  width: 100%;
  height: 100%;
  border: 3px solid #4286f4;
  box-sizing: border-box;
}

.resizable .resizers .resizer{
  width: 10px;
  height: 10px;
  border-radius: 50%; /*magic to turn square into circle*/
  background: white;
  border: 3px solid #4286f4;
  position: absolute;
}
.sortable {
  display: inline;
  padding: 10%;
  border-radius: 20px;
  width: 200px;
  /* height: 100px; */
}
.ghost {
  opacity: .5;
  background: #210D4D;
}

.clip p {
  display: inline-block;
  padding-left: 15px;
  pointer-events: none;
}

.progress {
  width: 2px;
  height: 100%;
  top: 0px;
  background-color: #b4a0df;
  position: absolute;
}
a:link {
  color: #aaa;
}
a:visited {
  color: #888;
}

::-webkit-scrollbar { width: 20px; height: 20px;}
::-webkit-scrollbar-button {  background-color: #888; }
::-webkit-scrollbar-track {  background-color: #000;}
::-webkit-scrollbar-track-piece { background-color: #000;}
::-webkit-scrollbar-thumb { height: 50px; background-color: #444; border-radius: 3px;}
::-webkit-scrollbar-corner { background-color: #646464;}
::-webkit-resizer { background-color: #666;}

form {
  padding: 1em;
  margin: 1em;
  border: 4px solid #210D4D;
  border-radius: 1em;
  background-color: #393939;
}
form label {
  text-align: end;
  display: inline-block;
  width: 15%;
  margin-right: 1em;
  vertical-align: middle;
}
form input {
    width: 75%;
    margin-bottom: 1em;
}
form textarea {
  width: 75%;
  height: 10em;
  margin-bottom: 2em;
  vertical-align: middle;
}
input[type=submit] {
  width: 20%;
}
#files {
  padding: 1em;
}

.right {
  text-align: 'right';
}

